<resources>
    <string name="app_name">MyBiz</string>

    <string name="add_btn">Add Creditor</string>
    <string name="view_btn">View Creditor</string>
    <string name="txt_creditor">CREDITORS</string>

    <string name="txt_debitor">DEBITORS</string>


    <!--    bskvj-->
    <string name="home_c">CREDITORS</string>

    <string name="home_d">DEBITORS</string>


    <string name="txt_addcreditor">ADD CREDITORS</string>
    <string name="add_namec"></string>
    <string name="add_phonec"></string>
    <string name="add_amountc"></string>
    <string name="add_datec"></string>
    <string name="savec_btn">SAVE DETAILS</string>
    <string name="clearc_btn">CLEAR ALL</string>

    <string name="txt_searchc">SEARCH HERE</string>
    <string name="searchtxtc"></string>
    <string name="btn_searchback">BACK </string>
    <string name="btn_dlt">DELETE </string>

    <string name="txt_updatec">UPDATE DETAILS</string>
    <string name="supdatetxt"></string>
    <string name="update_name"></string>
    <string name="btn_updateback">BACK </string>
    <string name="btn_update">UPDATE</string>


    <string name="txt_income">INCOME</string>

    <string name="txt_add_income">ADD INCOME</string>
    <string name="add_income_source"></string>
    <string name="add_income_date"></string>
    <string name="add_income_amount"></string>
    <string name="save_income_btn">SAVE DETAILS</string>
    <string name="clear_income_btn">CLEAR ALL</string>
    <string name="txt_update_income">UPDATE INCOME</string>
    <string name="update_income_source"></string>
    <string name="update_income_date"></string>
    <string name="update_income_amount"></string>

    <string name="loginPass"></string>
    <string name="imgbiz">TODO</string>
    <string name="loginName"></string>
    <string name="loginreg">Register Here</string>
    <string name="r_email"></string>
    <string name="r_confirm"></string>
    <string name="r_password"></string>
    <string name="regBtn">SAVE DETAILS</string>
    <string name="reghome">Register</string>
    <string name="add_expense"></string>


</resources>
