<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f2e"
    tools:context=".ActivityAddIncome">

    <TextView
        android:id="@+id/txt_add_income"
        android:layout_width="273dp"
        android:layout_height="55dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="48dp"
        android:background="#52527a "
        android:cursorVisible="true"
        android:text="@string/txt_add_income"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textCursorDrawable="@android:drawable/alert_light_frame"
        android:textSize="30sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ADD INCOME" />


    <EditText
        android:id="@+id/add_income_source"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="172dp"
        android:background="#9595b7"
        android:ems="10"
        android:hint="Source"
        android:inputType="textPersonName"
        android:text="@string/add_income_source"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_income_date"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="236dp"
        android:background="#9595b7"
        android:ems="10"
        android:hint="MM/DD/YYYY"
        android:inputType="text"
        android:text="@string/add_income_date"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/add_income_amount"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="304dp"
        android:background="#9595b7"
        android:ems="10"
        android:hint="Amount"
        android:inputType="text"
        android:text="@string/add_income_amount"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/save_income_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="376dp"
        android:background="#52527a "
        android:onClick="addIncome"
        android:shadowColor="#00706767"
        android:text="@string/save_income_btn"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="SAVE DETAILS" />

    <Button
        android:id="@+id/clear_income_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="440dp"
        android:background="#52527a "
        android:onClick="clearIncomeControls"
        android:shadowColor="#00706767"
        android:text="@string/clear_income_btn"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CLEAR ALL" />


</androidx.constraintlayout.widget.ConstraintLayout>